Remove failing test file